# discordlib

./: .gitignore  CMakeLists.txt  README.md  bot.cpp  bot.h  main.cpp  snowflake.cpp  snowflake.h
bot/: bot.cpp  bot.h
guild/: guild.cpp  guild.h  guild_json.cpp  guild_json.h
guild/channel/: channel.cpp  channel.h  channel_json.cpp  channel_json.h  channel_permissions.h
https/: https.cpp  https.h
user/: user.cpp  user.h  user_json.cpp  user_json.h
utils/: utils.cpp  utils.h
